# sds-backup

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  somelogs  vcpkg.json
cmake/: Plugin.h.in  sds.toml
scripts/source/: SDSInterface.psc  SDS_MCM.psc
src/: CMakeLists.txt
src/SDS/: BonfireMenu.cpp  BonfireMenu.h  ClassMenu.cpp  ClassMenu.h  Common.cpp  Common.h  HandlerAnimGraphs.cpp  HandlerAnimGraphs.h  HandlerDialogueMenu.cpp  HandlerDialogueMenu.h  HandlerLevelUpMenu.cpp  HandlerLevelUpMenu.h  HandlerRaceSexMenu.cpp  HandlerRaceSexMenu.h  HandlerTrainingMenu.cpp  HandlerTrainingMenu.h  HandlerTweenMenu.cpp  HandlerTweenMenu.h  Hooks.cpp  Hooks.h  HooksCore.cpp  HooksCore.h  HooksUI.cpp  HooksUI.h  LevelUp.cpp  LevelUp.h  Main.cpp  PCH.h  Papyrus.cpp  Papyrus.h  SDSClassMenu.cpp  SDSClassMenu.h  SDSInterface.cpp  SDSInterface.h  SDSScaleform.h  SDScaleform.cpp  Scaleform.cpp  Scaleform.h  ScaleformHelper.cpp  ScaleformHelper.h  (+4 more)
translation/: SDSInterface_english.txt  SDSInterface_russian.txt  copy.ps1
